# gen-ai-data-transformer

./: .gitignore  LICENSE  README.md  docker-compose.yml  iac.sh  setup.cfg
ai_data_formatter/: config.py  model.py
ai_data_formatter/cleansing/: api.py  model.py
ai_data_formatter/copilot/: model.py
ai_data_formatter/core/: api.py
ai_data_formatter/utils/: duckduckgo_search.py  github_search.py  prompt.py  search.py
api/: Dockerfile
api/src/: app.yaml  main.py  manage.py  requirements.txt  service.ini  test.sh
api/src/admin_portal/: models.py
api/src/autoclean/: apps.py  urls.py  views.py
api/src/config/: settings.py  urls.py
api/src/copilot/: apps.py  models.py  serializers.py  urls.py  views.py
api/src/copilot/migrations/: 0001_initial.py  0002_alter_chatsession_options.py
api/src/user/: allauth.py  urls.py  views.py
examples/: cleansing_prompt_template.json  code_prompt_template.json  codechat.ipynb  dev.sh  develop.ipynb  fn_org_cln.csv  sample-data.ipynb  ssn_org_cln.csv  textgen.ipynb
examples/data/: pii_cln.csv  pii_master  pii_org.csv  pii_test.csv
examples/data/pii_cln/: .part-00000-f7c2715e-6c59-4e1c-b89d-671f201168f0-c000.snappy.parquet.crc  part-00000-f7c2715e-6c59-4e1c-b89d-671f201168f0-c000.snappy.parquet
ui/: nuxt.config.ts
ui/components/: Conversation.vue  DocumentsManage.vue  MessageActions.vue  MsgContent.vue  MsgEditor.vue  NavigationDrawer.vue  Prompt.vue  Welcome.vue
ui/composables/: fetch.js  states.js
ui/lang/: en-US.json
ui/pages/: index.vue
ui/pages/account/: onboarding.vue  resetPassword.vue  signin.vue  signup.vue  verify-email.vue
ui/plugins/: settings.js
ui/server/middleware/: apiProxy.ts
ui/utils/: helper.js
