[metadata]
name = ai-data-formatter
version = 0.1.0
author = Ziang Jia
author_email = zjia@resultant.com
description = 
    Data transformation toolkit powered Generative AI.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    
[options]
packages = find:
install_requires =
    great_expectations>=0.17.0
    dataclasses-json>=0.5.7
    dataclasses-jsonschema>=2.16
    pandas<=2.0.3
    sqlalchemy<=1.4.48
    numpy<=1.24.4
    google-cloud-aiplatform[preview]
    protobuf
    google-cloud-storage
    google-cloud-logging
    google-cloud-pubsub
    fsspec
python_requires = >=3.8
tests_requires =
    pre-commit
    sphinx
    pytest
    hypothesis

[options.packages.find]
exclude =
    examples*