[metadata]
name = ai-data-formatter
version = 0.1.0
author = Ziang Jia
author_email = zjia@resultant.com
description = 
    Data transformation toolkit powered Generative AI.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    
[options]
packages = find:
install_requires =
    dataclasses-json>=0.5.7
    dataclasses-jsonschema>=2.16
    pandas<=2.0.3
    sqlalchemy<=1.4.48
    numpy<=1.24.4
    redis>=4.5.5
    pyodbc>=4.0.39
    psycopg2-binary<=2.9.8
    google-cloud-aiplatform>=1.33.0
    protobuf
    google-cloud-storage
    google-cloud-logging
    google-cloud-pubsub
    fsspec
    tqdm
    ratelimiter
    pyspark==3.2.1
    findspark>=2.0.0
    pyarrow
python_requires = >=3.8
tests_requires =
    pre-commit
    sphinx
    pytest
    hypothesis

[options.packages.find]
exclude =
    examples*